--- a/app/src/main/res/layout/item_question_type.xml
+++ b/app/src/main/res/layout/item_question_type.xml
@@ -116,21 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="gone">
-
-                <RadioButton
-                    android:id="@+id/visualYesRadioButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Yes" />
-
-                <RadioButton
-                    android:id="@+id/visualNoRadioButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="No" />
-            </RadioGroup>
+                android:visibility="gone" />
 
             <!-- Scenario-Based Question Type -->
             <LinearLayout
