proper user progress tracking implemented

--- a/app/src/main/res/layout/fragment_course_completed.xml
+++ b/app/src/main/res/layout/fragment_course_completed.xml
@@ -104,7 +104,7 @@ You are now a certified Peer To Peer Trader!"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Continue"
+        android:text="Continue To Next Level"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/secondaryDarkColor"
